# src/controllers/index.ts
@@ -1,6 +1,0 @@
-import authController from './auth';
-import pizzasController from './pizzas';
-import usersController from './users';
-import extrasController from './extras';
-
-export { authController, extrasController, pizzasController, usersController };
